...
    "使用前确认" : {

    },
    "使用在线智能体" : {

    },
    "使用帮助" : {

    },
    "使用扫描" : {

    },
    "使用离线模型" : {
...
    "安全边界" : {

    },
    "安心记录每一次用药" : {

    },
    "完成" : {

    },
    "实况活动" : {

    },
    "实际记录时间" : {
...
    "快捷咨询" : {

    },
    "快捷咨询问题" : {

    },
    "快速上手" : {

    },
    "快速找到需要的帮助" : {

    },
    "忽略" : {
...
            "state" : "translated",
            "value" : "Medication Trends"
          }
        }
      }
    },
    "用药跟踪" : {

    },
    "界面元素示例" : {

    },
    "疗程" : {
...
